changed location of index.html

--- a/starter-code/destination.html
+++ b/starter-code/destination.html
@@ -18,7 +18,7 @@
     </div>
     <div>
       <ul id="ul_nav">
-        <li><a href="/starter-code/index.html"><strong>00</strong>Home</a>
+        <li><a href="/index.html"><strong>00</strong>Home</a>
         </li>
         <li><a href="#"><strong>01</strong>Destination</a>
           <div class="nav-active"></div>
