--- a/starter-code/technology.html
+++ b/starter-code/technology.html
@@ -18,7 +18,7 @@
     </div>
     <div>
       <ul id="ul_nav">
-        <li><a href="/starter-code/index.html"><strong>00</strong>Home</a></li>
+        <li><a href="/index.html"><strong>00</strong>Home</a></li>
         <li><a href="/starter-code/destination.html"><strong>01</strong>Destination</a></li>
         <li><a href="/starter-code/crew.html"><strong>02</strong>Crew</a></li>
         <li><a href="#"><strong>03</strong>Technology</a>
