--- a/starter-code/crew.html
+++ b/starter-code/crew.html
@@ -17,7 +17,7 @@
     </div>
     <div>
       <ul id="ul_nav">
-        <li><a href="/starter-code/index.html"><strong>00</strong>Home</a></li>
+        <li><a href="/index.html"><strong>00</strong>Home</a></li>
         <li><a href="/starter-code/destination.html"><strong>01</strong>Destination</a></li>
         <li><a href="#"><strong>02</strong>Crew</a>
           <div class="nav-active"></div>
