changed logo location for index.html

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <header>
   <nav id="nav">
-    <img src="./assets/shared/logo.svg" alt="">
+    <img src="/starter-code/assets/shared/logo.svg" alt="">
     <div>
       <div class="nav-line"></div>
     </div>
