index mobile and tablet responsive

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           </p>
         </div>
 
-        <button class="subheading_1" id="explore">Explore</button>
+        <button id="explore">Explore</button>
       </div>
     </div>
   </section>
