mobile navigation added

--- a/index.html
+++ b/index.html
@@ -16,10 +16,22 @@
       <div class="nav-line"></div>
     </div>
     <div>
-      <ul id="ul_nav">
-        <li><a href="#"><strong>00</strong>Home</a>
-          <div class="nav-active"></div>
-        </li>
+      <div class="desktop_nav">
+        <ul id="ul_nav">
+          <li><a href="#"><strong>00</strong>Home</a>
+            <div class="nav-active"></div>
+          </li>
+          <li><a href="/starter-code/destination.html"><strong>01</strong>Destination</a></li>
+          <li><a href="/starter-code/crew.html"><strong>02</strong>Crew</a></li>
+          <li><a href="/starter-code/technology.html"><strong>03</strong>Technology</a></li>
+        </ul>
+      </div>
+      <div class="mobile_nav">
+        <img id="hamburger" src="/starter-code/assets/shared/icon-hamburger.svg" alt="">
+        <img id="close" src="/starter-code/assets/shared/icon-close.svg" alt="">
+      </div>
+      <ul id="mobile_ul_nav">
+        <li><a href="#"><strong>00</strong>Home</a></li>
         <li><a href="/starter-code/destination.html"><strong>01</strong>Destination</a></li>
         <li><a href="/starter-code/crew.html"><strong>02</strong>Crew</a></li>
         <li><a href="/starter-code/technology.html"><strong>03</strong>Technology</a></li>
@@ -44,5 +56,6 @@
     </div>
   </section>
 
+  <script src="/js/navigation.js"></script>
 </body>
 </html>
