--- a/starter-code/crew.html
+++ b/starter-code/crew.html
@@ -15,7 +15,7 @@
     <div>
       <div class="nav-line"></div>
     </div>
-    <div>
+    <div class="desktop_nav">
       <ul id="ul_nav">
         <li><a href="/index.html"><strong>00</strong>Home</a></li>
         <li><a href="/starter-code/destination.html"><strong>01</strong>Destination</a></li>
@@ -24,6 +24,17 @@
         </li>
         <li><a href="/starter-code/technology.html"><strong>03</strong>Technology</a></li>
       </ul>
+    </div>
+    <div class="mobile_nav">
+      <img id="hamburger" src="/starter-code/assets/shared/icon-hamburger.svg" alt="">
+      <img id="close" src="/starter-code/assets/shared/icon-close.svg" alt="">
+    </div>
+    <ul id="mobile_ul_nav">
+      <li><a href="/index.html"><strong>00</strong>Home</a></li>
+      <li><a href="/starter-code/destination.html"><strong>01</strong>Destination</a></li>
+      <li><a href="#"><strong>02</strong>Crew</a></li>
+      <li><a href="/starter-code/technology.html"><strong>03</strong>Technology</a></li>
+    </ul>
     </div>
   </nav>
 </header>
@@ -115,5 +126,6 @@
   </section>
 
   <script src="/js/crew.js"></script>
+  <script src="/js/navigation.js"></script>
 </body>
 </html>
