destination page responsive

--- a/starter-code/destination.html
+++ b/starter-code/destination.html
@@ -45,42 +45,45 @@
       <div class="destination_container">
         <h5><strong>01</strong> Pick your destination</h5>
 
-        <div class="destination_main destination_moon">
-          <img src="/starter-code/assets/destination/image-moon.webp" alt="">
+        <div class="planet-container">
 
-          <!-- Moon -->
-          <div class="destination_text_spacing">
-            <div class="destination_secondary_nav">
-              <ul>
-                <li id="moon_selector">Moon</li>
-                  <div class="destination_secondary_nav_active"></div>
-                <li id="mars_selector">Mars</li>
-                <li id="europa_selector">Europa</li>
-                <li id="titan_selector">Titan</li>
-              </ul>
-            </div>
-            <h2>Moon</h2>
+          <div class="destination_main destination_moon">
+            <img src="/starter-code/assets/destination/image-moon.webp" alt="">
 
-            <p>
-              See our planet as you’ve never seen it before. A perfect relaxing trip away to help 
-              regain perspective and come back refreshed. While you’re there, take in some history by visiting the Luna 2 and Apollo 11 landing sites.
-            </p>
-
-            <div class="destination_line_break"></div>
-
-            <div class="destination_statistics">
-              <div>
-                <span class="subheading_2">Avg. distance</span>
-                <span class="subheading_1">384,400 km</span>
+            <!-- Moon -->
+            <div class="destination_text_spacing">
+              <div class="destination_secondary_nav">
+                <ul>
+                  <li id="moon_selector">Moon</li>
+                    <div class="destination_secondary_nav_active"></div>
+                  <li id="mars_selector">Mars</li>
+                  <li id="europa_selector">Europa</li>
+                  <li id="titan_selector">Titan</li>
+                </ul>
               </div>
+              <h2>Moon</h2>
 
-              <div>
-                <span class="subheading_2">Est. travel time</span>
-                <span class="subheading_1">3 days</span>
+              <p>
+                See our planet as you’ve never seen it before. A perfect relaxing trip away to help 
+                regain perspective and come back refreshed. While you’re there, take in some history by visiting the Luna 2 and Apollo 11 landing sites.
+              </p>
+
+              <div class="destination_line_break"></div>
+
+              <div class="destination_statistics">
+                <div>
+                  <span class="subheading_2">Avg. distance</span>
+                  <span class="subheading_1">384,400 km</span>
+                </div>
+
+                <div>
+                  <span class="subheading_2">Est. travel time</span>
+                  <span class="subheading_1">3 days</span>
+                </div>
               </div>
             </div>
           </div>
-        </div>
+
 
           <!-- Mars -->
           <div class="destination_main destination_mars">
@@ -193,6 +196,7 @@
             </div>
           </div>
           
+          </div>
 
 
 
