--- a/starter-code/destination.html
+++ b/starter-code/destination.html
@@ -42,8 +42,8 @@
 <body>
   <section>
     <div id="destination">
-      <div class="destination_container">
-        <h5><strong>01</strong> Pick your destination</h5>
+      <div class="container">
+        <h5 class="global_subheading"><strong>01</strong> Pick your destination</h5>
 
         <div class="planet-container">
 
