--- a/starter-code/technology.html
+++ b/starter-code/technology.html
@@ -20,7 +20,7 @@
       <ul id="ul_nav">
         <li><a href="/index.html"><strong>00</strong>Home</a></li>
         <li><a href="/starter-code/destination.html"><strong>01</strong>Destination</a></li>
-        <li><a href="/js/crew.js"><strong>02</strong>Crew</a></li>
+        <li><a href="/starter-code/crew.html"><strong>02</strong>Crew</a></li>
         <li><a href="#"><strong>03</strong>Technology</a>
           <div class="nav-active"></div>
         </li>
@@ -42,94 +42,46 @@
 <body>
   <section>
     <div id="technology">
-      <div class="technology_container">
+      <div class="container">
 
-        <h5><strong>03</strong> SPACE LAUNCH 101</h5>
+        <h5 class="global_subheading"><strong>03</strong> SPACE LAUNCH 101</h5>
+      
+      </div>
 
         <!-- Launch Vehicle -->
-        <div class="launch_vehicle">
 
-
-          <div class="main_content">
-            <div class="ul_nav">
-              <ul>
-                <li id="launchNav" class="active">1</li>
-                <li id="portNav">2</li>
-                <li id="capsuleNav">3</li>
-              </ul>
-            </div>
-
-            <div class="main_info">
-              <div class="subheading_2">THE TERMINOLOGY...</div>
-              <h3>Launch vehicle</h3>
-              <p>A launch vehicle or carrier rocket is a rocket-propelled vehicle used to carry a 
-                payload from Earth's surface to space, usually to Earth orbit or beyond. Our 
-                WEB-X carrier rocket is the most powerful in operation. Standing 150 metres tall, 
-                it's quite an awe-inspiring sight on the launch pad!
-              </p>
-            </div>
-          </div>
-          <div class="img">
+        <div class="main launch_vehicle">
+          <div>
             <img src="/starter-code/assets/technology/image-launch-vehicle-portrait.jpg" alt="">
-          </div>
 
-        </div>
+            <div class="container">
 
-        <!-- Spaceport-->
-        <div class="spaceport">
-
-
-          <div class="main_content">
-            <div class="ul_nav">
-              <ul>
-                <li id="launchNav">1</li>
-                <li id="portNav" class="active">2</li>
-                <li id="capsuleNav">3</li>
-              </ul>
-            </div>
-
-            <div class="main_info">
-              <div class="subheading_2">THE TERMINOLOGY...</div>
-              <h3>SPACEPORT</h3>
-              <p>A spaceport or cosmodrome is a site for launching (or receiving) spacecraft, by analogy to the seaport for ships or airport for aircraft. Based in the famous Cape Canaveral, our spaceport is ideally situated to take advantage of the Earth’s rotation for launch.
-              </p>
+              <div>
+                <div class="subheading_2">THE TERMINOLOGY…</div>
+                <div class="ul_nav">
+                  <ul>
+                    <li id="launchNav" class="active">1</li>
+                    <li id="portNav">2</li>
+                    <li id="capsuleNav">3</li>
+                  </ul>
+                </div>
+                <h3>
+                  LAUNCH VEHICLE
+                </h3>
+                <p>
+                  A launch vehicle or carrier rocket is a rocket-propelled vehicle used to carry a payload from Earth's surface to space, usually to Earth orbit or beyond. Our WEB-X carrier rocket is the most powerful in operation. Standing 150 metres tall, it's quite an awe-inspiring sight on the launch pad!
+                </p>
+              </div>
             </div>
           </div>
-          <div class="img">
-            <img src="/starter-code/assets/technology/image-spaceport-portrait.jpg" alt="">
-          </div>
 
-        </div>
+          
 
-        <!-- Space Capsule-->
-        <div class="space_capsule">
-
-
-          <div class="main_content">
-            <div class="ul_nav">
-              <ul>
-                <li id="launchNav">1</li>
-                <li id="portNav">2</li>
-                <li id="capsuleNav" class="active">3</li>
-              </ul>
-            </div>
-
-            <div class="main_info">
-              <div class="subheading_2">THE TERMINOLOGY...</div>
-              <h3>SPACE CAPSULE</h3>
-              <p>A space capsule is an often-crewed spacecraft that uses a blunt-body reentry capsule to reenter the Earth's atmosphere without wings. Our capsule is where you'll spend your time during the flight. It includes a space gym, cinema, and plenty of other activities to keep you entertained.
-              </p>
-            </div>
-          </div>
-          <div class="img">
-            <img src="/starter-code/assets/technology/image-space-capsule-portrait.jpg" alt="">
-          </div>
 
         </div>
 
 
-      </div>
-    </div>
+
   </section>
 
   <script src="/js/technology.js"></script>
