--- a/starter-code/technology.html
+++ b/starter-code/technology.html
@@ -52,12 +52,12 @@
 
         <div class="main launch_vehicle">
           <div>
-            <img src="/starter-code/assets/technology/image-launch-vehicle-portrait.jpg" alt="">
+            <img src="/starter-code/assets/technology/image-launch-vehicle-portrait.jpg" alt="" class="desktop">
+            <img src="/starter-code/assets/technology/image-launch-vehicle-landscape.jpg" alt="" class="mobile">
 
             <div class="container">
 
-              <div>
-                <div class="subheading_2">THE TERMINOLOGY…</div>
+              <div class="main-info">
                 <div class="ul_nav">
                   <ul>
                     <li id="launchNav" class="active">1</li>
@@ -65,19 +65,80 @@
                     <li id="capsuleNav">3</li>
                   </ul>
                 </div>
-                <h3>
-                  LAUNCH VEHICLE
-                </h3>
-                <p>
-                  A launch vehicle or carrier rocket is a rocket-propelled vehicle used to carry a payload from Earth's surface to space, usually to Earth orbit or beyond. Our WEB-X carrier rocket is the most powerful in operation. Standing 150 metres tall, it's quite an awe-inspiring sight on the launch pad!
-                </p>
+                <div>
+                  <div class="subheading_2">THE TERMINOLOGY…</div>
+                  <h3>
+                    LAUNCH VEHICLE
+                  </h3>
+                  <p>
+                    A launch vehicle or carrier rocket is a rocket-propelled vehicle used to carry a payload from Earth's surface to space, usually to Earth orbit or beyond. Our WEB-X carrier rocket is the most powerful in operation. Standing 150 metres tall, it's quite an awe-inspiring sight on the launch pad!
+                  </p>
+                </div>
               </div>
             </div>
           </div>
+        </div>
 
-          
+        <!-- Spaceport Vehicle -->
 
+        <div class="main spaceport">
+          <div>
+            <img src="/starter-code/assets/technology/image-spaceport-portrait.jpg" alt="" class="desktop">
 
+            <img src="/starter-code/assets/technology/image-spaceport-landscape.jpg" alt="" class="mobile">
+
+            <div class="container">
+
+              <div class="main-info">
+                <div class="ul_nav">
+                  <ul>
+                    <li id="launchNav">1</li>
+                    <li id="portNav" class="active">2</li>
+                    <li id="capsuleNav">3</li>
+                  </ul>
+                </div>
+                <div>
+                  <div class="subheading_2">THE TERMINOLOGY…</div>
+                  <h3>
+                    SPACEPORT
+                  </h3>
+                  <p>
+                    A spaceport or cosmodrome is a site for launching (or receiving) spacecraft, by analogy to the seaport for ships or airport for aircraft. Based in the famous Cape Canaveral, our spaceport is ideally situated to take advantage of the Earth’s rotation for launch.
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!-- Space Capsule -->
+
+        <div class="main space_capsule">
+          <div>
+            <img src="/starter-code/assets/technology/image-space-capsule-portrait.jpg" alt="" class="desktop">
+            <img src="/starter-code/assets/technology/image-space-capsule-landscape.jpg" alt="" class="mobile">
+
+            <div class="container">
+
+              <div class="main-info">
+                <div class="ul_nav">
+                  <ul>
+                    <li id="launchNav">1</li>
+                    <li id="portNav">2</li>
+                    <li id="capsuleNav" class="active">3</li>
+                  </ul>
+                </div>
+                <div>
+                  <div class="subheading_2">THE TERMINOLOGY…</div>
+                  <h3>
+                    SPACE CAPSULE
+                  </h3>
+                  <p>
+                    A space capsule is an often-crewed spacecraft that uses a blunt-body reentry capsule to reenter the Earth's atmosphere without wings. Our capsule is where you'll spend your time during the flight. It includes a space gym, cinema, and plenty of other activities to keep you entertained.                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
 
 
